learning-kubernetes/voting-app/redis_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis 
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis 
  template:
    metadata:
      labels:
        app: redis 
    spec:
      containers:
        - name: redis 
          image: redis:alpine
          ports:
          - containerPort: 6379
            name: redis 
          volumeMounts:
          - mountPath: /data
            name: redis-data
      volumes:
      - name: redis-data
        emptyDir: {}
