learning-kubernetes/voting-app/worker_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
   app: worker 
   name: worker
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - image: dockersamples/examplevotingapp_worker
          name: worker
