learning-kubernetes/voting-app/result_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
  type: NodePort
  ports:
  - port: 5001
    targetPort: 80
    nodePort: 30002
    name: result-service
  selector:
    app: result
