learning-kubernetes/voting-app/vote_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 80
      nodePort: 30001
      name: vote-service
  selector:
    app: vote
