learning-kubernetes/voting-app/voting-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /vote
            backend:
              service:
                name: vote
                port:
                  number: 5000
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /result
            backend:
              service:
                name: result
                port:
                  number: 5001
